# rendering-engine

./: .gitignore  CMakeLists.txt  LearningOpenGL.sln  Main.cpp
Debug/: LearningOpenGL.ilk
LearningOpenGL/: LearningOpenGL.vcxproj  LearningOpenGL.vcxproj.filters  Main.cpp
LearningOpenGL/Debug/: main.obj.enc  vc141.idb
LearningOpenGL/Debug/LearningOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LearningOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LearningOpenGL/RenderEngine/Private/: Application.cpp  Display.cpp  Loader.cpp  Shader.cpp
LearningOpenGL/RenderEngine/Public/: Application.h  Display.h  Filesystem.h  Loader.h  Model.h  Renderer.h  Shader.h  StaticShader.h
LearningOpenGL/RenderEngine/Resources/: fragmentShader  vertexShader
LearningOpenGL/Windows/Private/: Application.cpp
LearningOpenGL/Windows/Public/: Application.h
RenderEngine/Private/: Application.cpp  Filesystem.cpp  Loader.cpp  Renderer.cpp  Shader.cpp
RenderEngine/Public/: Application.h  Display.h  Loader.h  Model.h  Renderer.h  Shader.h
RenderEngine/Public/Exceptions/: WindowNotLoadedException.h
RenderEngine/Resources/: fragmentShader.glsl
